[metadata]
name = kitchen-saladier
summary = Uno Saladier
description-file =
    README.rst
author = OpenStack
author-email = boa@enovance.com
home-page = http://www.enovance.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    kitchen-saladier

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = kitchen-saladier/locale
domain = kitchen-saladier

[update_catalog]
domain = kitchen-saladier
output_dir = kitchen-saladier/locale
input_file = kitchen-saladier/locale/kitchen-saladier.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kitchen-saladier/locale/kitchen-saladier.pot
