[metadata]
name = kitchen-saladier
summary = Uno Saladier
description-file =
    README.rst
author = eNovance Boa
author-email = boa@enovance.com
home-page = http://www.enovance.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    saladier

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[entry_points]
console_scripts =
    saladier-api = saladier.cmd.api:main
    saladier-dbsync = saladier.cmd.dbsync:main

oslo.config.opts =
    saladier = saladier.opts:list_opts
    saladier_integrationtests = saladier_integrationtests.common.config:list_opts
